// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ChatDisplay - web_fetch tool call snapshot altMode (running → done) > snapshot: done state (result appended) 1`] = `
"❯ [you]
  Fetch the documentation page

⚙ Fetch https://example.com/docs
  └─ Fetched (200, 1024 bytes)

"
`;

exports[`ChatDisplay - web_fetch tool call snapshot altMode (running → done) > snapshot: running state (no result yet) 1`] = `
"❯ [you]
  Fetch the documentation page

⚙ Fetch https://example.com/docs
  └─ Running ...
"
`;
